# order-book-aggregator

./: .env  .env.example  Cargo.toml  README.md
src/: aggregator.rs  error.rs  main.rs  order_book.rs  rate_limiter.rs  types.rs
src/data_providers/: coinbase.rs  gemini.rs  mod.rs
src/utils/: mod.rs  rate_limiter.rs
