[package]
name = "order-book-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
ordered-float = "5.1.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.41", features = ["full"] }
